# Environment

./: CMakeLists.txt
Messaging/: CMakeLists.txt  IMessage.hpp  Message.hpp  Scheduler.hpp
SimpleProject/: CMakeLists.txt  HelloWorld.hpp  SimpleProject.cpp  SimpleProject.hpp
SimpleProject/ut/: TestSimpleProject.cpp
SimpleProject/ut/mocks/: MockScheduler.hpp
